update open api, delete unused code
