# docs/api.yaml
@@ -21,6 +21,10 @@ paths:
           in: query
           description: 'wait until any kv changed. for example wait=5s, server will not response until 5 seconds during that time window, if any kv changed, server will return 200 and kv list, otherwise return 304 and empty body'
           type: string
+        - name: match
+          in: query
+          description: 'match works with label query param, it specifies label match pattern. if it is empty, server will return kv which''s labels partial match the label query param. uf it is exact, server will return kv which''s labels exact match the label query param'
+          type: string
       consumes:
         - '*/*'
       produces:
@@ -32,25 +36,22 @@ paths:
           schema:
             $ref: '#/definitions/KVResponse'
           headers:
-            X-RateLimit-Limit:
+            X-Kie-Revision:
               type: integer
-              description: Request limit per hour.
+              description: cluster latest revision number.
         '304':
           description: empty body
     delete:
-      summary: 'delete key by kvID and labelID. Want better performance, give labelID'
+      summary: delete key by kv ID.
       operationId: Delete
       parameters:
         - name: project
           in: path
           required: true
           type: string
-        - name: kvID
+        - name: kv_id
           in: query
           required: true
-          type: string
-        - name: labelID
-          in: query
           type: string
       consumes:
         - '*/*'
@@ -80,6 +81,14 @@ paths:
           in: query
           description: 'label pairs,for example &label=service:order&label=version:1.0.0'
           type: string
+        - name: match
+          in: query
+          description: 'match works with label query param, it specifies label match pattern. if it is empty, server will return kv which''s labels partial match the label query param. uf it is exact, server will return kv which''s labels exact match the label query param'
+          type: string
+        - name: revision
+          in: query
+          description: 'each time you query,server will return a number in header X-Kie-Revision. you can record it in client side, use this number as param value. if current revision is greater than it, server will return data'
+          type: string
       consumes:
         - '*/*'
       produces:
@@ -92,6 +101,10 @@ paths:
             type: array
             items:
               $ref: '#/definitions/KVResponse'
+          headers:
+            X-Kie-Revision:
+              type: integer
+              description: cluster latest revision number.
         '304':
           description: empty body
     put:
@@ -122,22 +135,18 @@ paths:
           description: ''
           schema:
             $ref: '#/definitions/v1.KVBody'
-  '/v1/{project}/kie/revision/{label_id}':
+  '/v1/{project}/kie/revision/{key_id}':
     get:
-      summary: get all revisions by label id
+      summary: get all revisions by key id
       operationId: GetRevisions
       parameters:
         - name: project
           in: path
           required: true
           type: string
-        - name: label_id
+        - name: key_id
           in: path
           required: true
-          type: string
-        - name: key
-          in: query
-          description: only return history about a specific key
           type: string
       consumes:
         - application/json
@@ -151,41 +160,21 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/LabelHistoryResponse'
-  '/v1/{project}/kie/summary':
-    get:
-      summary: 'search key values by labels combination, it returns multiple labels group'
-      operationId: Search
-      parameters:
-        - name: project
-          in: path
-          required: true
-          type: string
-        - name: q
-          in: query
-          description: 'the combination format is {label_key}:{label_value}+{label_key}:{label_value} for example: /v1/test/kie/kv?q=app:mall&q=app:mall+service:cart, that will query key values from 2 kinds of labels'
-          type: string
-      consumes:
-        - '*/*'
-      produces:
-        - application/json
-        - text/yaml
-      responses:
-        '200':
-          description: get key value success
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/KVResponse'
+              $ref: '#/definitions/KVDoc'
 definitions:
   KVDoc:
     type: object
     properties:
-      _id:
-        type: string
       check:
         type: string
+      create_revision:
+        type: integer
+        format: int64
+      create_time:
+        type: string
       domain:
+        type: string
+      id:
         type: string
       key:
         type: string
@@ -197,9 +186,13 @@ definitions:
           type: string
       project:
         type: string
-      revision:
+      status:
+        type: string
+      update_revision:
         type: integer
-        format: int32
+        format: int64
+      update_time:
+        type: string
       value:
         type: string
       value_type:
@@ -213,12 +206,6 @@ definitions:
           $ref: '#/definitions/KVDoc'
       label:
         $ref: '#/definitions/LabelDocResponse'
-      num:
-        type: integer
-        format: int32
-      size:
-        type: integer
-        format: int32
       total:
         type: integer
         format: int32
@@ -231,22 +218,6 @@ definitions:
         type: object
         additionalProperties:
           type: string
-  LabelHistoryResponse:
-    type: object
-    properties:
-      data:
-        type: array
-        items:
-          $ref: '#/definitions/KVDoc'
-      label_id:
-        type: string
-      labels:
-        type: object
-        additionalProperties:
-          type: string
-      revision:
-        type: integer
-        format: int32
   v1.KVBody:
     type: object
     properties:
@@ -256,5 +227,5 @@ definitions:
           type: string
       value:
         type: string
-      valueType:
+      value_type:
         type: string
